# rust_doorbell

./: .gitignore  Cargo.toml  Makefile  README.md
deployment/: stepfunction-template.yml  websocket-template.yml
deployment/statemachine/: stateMachine.asl.json
infrastructure/: s3-template.yml  s3presignedurl-template.yml  stepfunction-template.yml  websocket-template.yml
services/session-manager/: Cargo.toml  Makefile  README.md
services/session-manager/deployment/: dax.yml  device-api.yml  dynamodb.yml  stream-api.yml  subscription-api.yml
services/session-manager/src/: error.rs  lib.rs
services/session-manager/src/commands/: add_stream.rs  add_subscription.rs  mod.rs  update_streams_ttl.rs  update_subscription_device.rs
services/session-manager/src/dtos/: mod.rs  subscription_api_request.rs
services/session-manager/src/models/: device_request.rs  mod.rs  stream_request.rs  subscription_request.rs
services/session-manager/src/queries/: get_active_streams.rs  get_subscription_query.rs  mod.rs
services/session-manager/src/utils/: api_helper.rs  dynamodb.rs  mod.rs
services/session-manager/swagger/: docs_list.json
services/session-manager/swagger/docs/: device.json  stream.json  subscription.json
services/v1/: Cargo.toml  Makefile  README.md
services/v1/deployment/: eventbridge-template.yml  s3-template.yml  s3presignedurl-template.yml
services/v1/deployment/statemachine/: stateMachine.asl.json
services/v1/src/: error.rs
services/v1/src/dtos/: compare_face_dto.rs  websocket_request.rs
services/v1/src/models/: connection.rs
src/: error.rs  lib.rs  utils.rs
src/aws/: client.rs
src/dtos/: connected_event.rs  mod.rs  request.rs  s3_presigned_url_request.rs  send_code_dto.rs  websocket_request.rs
src/models/: connection.rs
src/modules/: mod.rs  s3_presigned_url.rs  web_socket.rs
