[package]
name = "rust_doorbell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.5.1"
aws-sdk-apigatewaymanagement = "0.5.2"
aws-sdk-dynamodb = "0.5.0"
aws-sdk-eventbridge = "0.5.0"
aws-sdk-s3 = "0.5.0"
aws-types = "0.5.1"
chrono = "0.4.19"
futures = "0.3.17"
lambda_runtime = "0.4.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.13.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "json"] }
uuid = { version = "0.8", features = ["v4"] }

[[bin]]
name = "on-connect"
path = "src/bin/on-connect.rs"

[[bin]]
name = "on-disconnect"
path = "src/bin/on-disconnect.rs"

[[bin]]
name = "s3-presigned-url"
path = "src/bin/s3-presigned-url.rs"
