[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "subscription"
path = "src/bin/subscription.rs"

[dependencies]
aws-config = "0.6.0"
aws-sdk-dynamodb = "0.6.0"
aws-types = "0.6.0"
aws_lambda_events = "0.5.0"
lambda_http = "0.4.1"
lambda_runtime = "0.4.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = "1.13.0"
